@@ -10,10 +10,34 @@ clearpart_handler () {
 				;;
 			--all)
 				ks_log "can't clear multiple drives; assuming just the first one"
-				# TODO: this will break when we move to udev
-				# device names, and I bet it isn't safe for
-				# installs from USB ...
+				# TODO: I bet this isn't safe for installs
+				# from USB ...
 				ks_preseed d-i partman-auto/disk string /dev/discs/disc0/disc
+				# The above breaks when udev is configured
+				# to avoid devfs-style device names, so we
+				# have to write out a partman hook on the
+				# fly to handle this properly if the tools
+				# are available.
+				ks_write_script /lib/partman/auto.d/01kickseed <<'EOF'
+#! /bin/sh
+set -e
+# Generated by kickseed for 'clearpart --all'.
+
+. /usr/share/debconf/confmodule
+
+# Only run the first time.
+if [ -f /var/lib/partman/initial_auto ]; then
+	exit 0
+fi
+
+if type list-devices >/dev/null 2>&1; then
+	FIRSTDISK="$(list-devices disk | head -n1)"
+	logger -t kickseed "Clearing first disk ($FIRSTDISK) for Kickstart 'clearpart --all'"
+	db_set partman-auto/disk "$FIRSTDISK"
+fi
+
+exit 0
+EOF
 				shift
 				;;
 			--drives)
