@@ -2,6 +2,9 @@ kickseed (0.40) UNRELEASED; urgency=low
 
   * Handle Kickstart files with DOS line endings (see Malone #61576).
   * test-kickseed: Adjust mktemp call to work with busybox.
+  * Make 'clearpart --all' write out a partman auto.d script to clear the
+    first disk, since /dev/discs/disc0/disc isn't available any more and
+    there's no single static alternative (closes: Malone #61576).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed,  4 Oct 2006 18:27:04 +0100
 
